# homework

./: CMakeLists.txt  README.md  chatbot.h  database.txt  literals.h  main.cpp  process.h
